JumpScript/tests/baselines/reference/crashOnMethodSignatures.errors.txt
tests/cases/compiler/crashOnMethodSignatures.jump(2,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/crashOnMethodSignatures.jump (1 errors) ====
    class A {
        a(completed: () => any): void;
        ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    